--- a/css/responsiv.css
+++ b/css/responsiv.css
@@ -1,17 +1,136 @@
-@media (max-width: 1119px){
+@media (max-width: 1199px) {
+    /*titles*/
+    h1,
+    .title1 {
+        font-size: 36px;
+        line-height: 42px;
+    }
+
+    h2,
+    .title2 {
+        font-size: 24px;
+        line-height: 28px;
+    }
+
+    h3,
+    .title3 {
+        font-size: 24px;
+        line-height: 33px;
+    }
+
+    h4,
+    .title4 {
+        font-size: 18px;
+        line-height: 25px;
+    }
+
+    h5,
+    .title5 {
+        font-size: 14px;
+        line-height: 17px;
+    }
+
+    h6,
+    .title6 {
+        font-size: 13px;
+        line-height: 18px;
+    }
+    
+    .line {
+        width: 115px;
+    }
+
     .container {
-        padding: 0px 15px;
+        padding: 0px auto;
+    }
+
+    .header__logo {
+        margin: 0px;
+    }
+
+    .banner__box {
+        padding-top: 212px;
+        padding-left: 100px;
+        margin-left: -2%;
+        margin-right: -2%;
+    }
+
+    .banner__logo {
+        margin-bottom: 54px;
+    }
+
+    .banner__title {
+        margin-bottom: 42px;
+        margin-right: -40px;
+    }
+
+    .banner__line {
+        margin-bottom: 31px;
+    }
+
+    .banner__text {
+        margin-bottom: 31px;
     }
 }
 
-@media (max-width: 767px) {
+/* @media (max-width: 767px) {
     .container {
-        padding: 5px;
+        padding: 0px auto;
+        margin: 0px auto;
     }
-}
 
-@media (max-width: 3px) {
-    .container {
-        padding: 5px;
+    .header__logo {
+        margin: 0px;
+    }
+} */
+
+@media (max-width: 319px) {
+    .line {
+        width: 134px;
+    }
+    
+    .header-nav {
+        justify-items: center;
+    }
+
+    /* .container {
+        padding-left: 15px;
+        padding-right: 15px;
+    } */
+
+    .menu__item {
+        display: none;
+        width: 100%;
+    }
+
+    .menu__mobil {
+        display: block;
+        padding-top: 19px;
+        padding-bottom: 19px;
+        width: 18px;
+    }
+
+    .header__logo {
+        margin-top: 16px;
+        margin-bottom: 16px;
+        width: 130px;
+    }
+
+    .banner__box {
+        padding-left: 0px;
+        padding-top: 140px;
+        justify-content: center;
+    }
+
+    .banner__logo {
+        display: none;
+    }
+
+    .banner__title {
+        text-align: center;
+    }
+
+    .banner__line {
+        margin: 0px auto 42px auto;
     }
 }
