--- a/css/styles.css
+++ b/css/styles.css
@@ -418,30 +418,26 @@ h6,
     margin: -1px;
 }
 
-/* [name="tab"] {
-    visibility: hidden;
-    opacity: 0;
-}
-
-[name="tab"]:checked {
-    display: flex;
-} */
-
 .tabs__box {
     display: flex;
     border: #BDBDBD solid 1px;
     justify-content: space-between;
+    display: none;
 }
 
-.tab2,
-.tab3 {
+[name=tabs] {
     display: none;
+}
+
+[name=tabs]:checked + .tabs__box {
+    display: flex;
 }
 
 .tabs__text-box {
     margin-left: 100px;
     margin-right: 30px;
 }
+
 
 .tabs__header {
     padding-top: 42px;
@@ -458,7 +454,7 @@ h6,
 }
 
 .tabs__img {
-    aspect-ratio: 470/500;
+    width: 100%;
 }
 
 /*ABOUT*/
@@ -601,7 +597,6 @@ h6,
 
 .reviewes__manager {
     display: flex;
-    flex-wrap: wrap;
     margin-bottom: 64px;
 }
 
@@ -629,6 +624,9 @@ h6,
 .stylish {
     background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(../image/stylishbg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .stylish__box {
