--- a/lesson11/css/style.css
+++ b/lesson11/css/style.css
@@ -4,7 +4,7 @@ body {
 
 .box {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fite, minmax(160px, 1fr));
     grid-template-rows: auto;
 }
 
@@ -12,18 +12,76 @@ body {
     position: relative;
 }
 
+.item-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+}
+
+.item-2 {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.item-6 {
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
+}
+
+.item-3 {
+    grid-column: 4 / 5;
+    grid-row: 1 / 2;
+}
+
+.item-4 {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+
+.item-5 {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.item-7 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+
 .item__text {
     display: none;
-    position:absolute;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
 
+.item__text::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 67, 67, 0.8);
+    z-index: 1;
 }
 
 .item:hover > .item__text {
-    display: block;
+    display: flex;
+}
+
+.item-content {
+    color: #ffffff;
+    position: relative;
+    z-index: 2;
 }
 
 .item__img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 /* .box {
