--- a/css/responsiv.css
+++ b/css/responsiv.css
@@ -493,13 +493,18 @@
     }
 
     /* CONTACT */
-
-    .contact__textarea {
-        margin-top: 50px;
+    .contact__text {
+        margin-bottom: 64px;
     }
 
-    .contact__form-button {
-        margin-top: 50px;
+    .contact__form {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .contact__form-input,
+    .contact__textarea {
+        margin: 50px 0 0 0;
     }
 
     /* FOOTER */
