--- a/css/styles.css
+++ b/css/styles.css
@@ -632,19 +632,21 @@ h6,
 }
 
 /*CONTACT FORM*/
-
 .contact__text {
     margin-bottom: 89px;
 }
 
 .contact__form {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr) ;
+    grid-template-rows: auto;
 }
 
-.contact__form-box {
-    margin-bottom: 50px;
-    min-height: 215px;
+.contact__form-part1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-right: 15px;
 }
 
 .contact__form-input,
@@ -653,22 +655,15 @@ h6,
     border-bottom: 1px solid #BDBDBD;
     font-family: Open Sans;
     font-size: 14px;
+    line-height: 19px;
     color: #BDBDBD;
     width: 100%;
     padding-bottom: 17px;
 }
 
 .contact__textarea {
-    padding-bottom: 0;
-    height: 100%;
-}
-
-.contact__form-input + input {
-    margin-top: 50px;
-}
-
-.contact__textarea {
     resize: none;
+    margin-left: 15px;
 }
 
 .contact__form-input:focus,
@@ -678,7 +673,10 @@ h6,
 }
 
 .contact__form-button {
-    margin: 0px auto 50px;
+
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    margin: 50px auto 50px;
 }
 
 /*FOOTER*/
