--- a/css/responsiv.css
+++ b/css/responsiv.css
@@ -1,5 +1,3 @@
-
-
 @media (max-width: 1199px) {
     /*titles*/
     h1,
@@ -280,11 +278,6 @@
     }
 
     /* ABOUT */
-    .about__item {
-        padding-left: 16.6666%;
-        padding-right: 16.6666%;
-    }
-
     .about__text {
         margin-bottom: 50px;
     }
@@ -350,7 +343,7 @@
         min-width: 100vw;
     }
 
-/* 
+    /* 
     [name="menu__mobil"]:checked {
         display: none;
     } */
@@ -414,6 +407,11 @@
     }
 
     /* ABOUT */
+    .about__list {
+        display: block;
+        
+    }
+
     .about__text {
         margin-bottom: 84px;
     }
