--- a/css/styles.css
+++ b/css/styles.css
@@ -216,7 +216,6 @@ h6,
 }
 
 .banner__box {
-    display: flex;
     padding: 283px 0px 185px 0px;
 }
 
@@ -244,25 +243,13 @@ h6,
     }
 }
 
-.banner__logo:last-child {
-    margin-bottom: 0;
-}
-
 .banner__title {
     margin-bottom: 55px;
-}
-
-.banner__title:last-child {
-    margin-bottom: 0px;
 }
 
 .banner__line {
     margin-bottom: 42px;
     margin-left: 0px;
-}
-
-.banner__line:last-child {
-    margin-bottom: 0px;
 }
 
 .banner__text {
@@ -271,10 +258,12 @@ h6,
     width: 270px;
 }
 
-.banner__text:last-child {
+.banner__logo:last-child,
+.banner__text:last-child,
+.banner__title:last-child,
+.banner__line:last-child {
     margin-bottom: 0px;
 }
-
 
 /* BANER_FORM */
 .banner__form-box {
@@ -301,12 +290,14 @@ h6,
 }
 
 .banner__form {
-    display: block;
-    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .banner__form-item {
-    padding: 0px 50px;
+    padding-left: 50px;
+    padding-right: 50px;
     margin-bottom: 33px;
 }
 
@@ -332,11 +323,12 @@ h6,
 
 .form__button {
     width: 100%;
-    min-height: 15px;
+    min-height: 20px;
     background-color: var(--color-accent-and-hover);
     border-radius: 0px 0px 10px 10px;
     font-family: Open Sans;
     font-size: 15px;
+    line-height: 20px;
     padding: 22px auto;
     margin-top: 45px;
     border: none;
@@ -355,12 +347,6 @@ h6,
 /*MEDIA*/
 .media {
     background-color: #F8EFEF;
-}
-
-.media__box {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
 }
 
 .media__box1 {
@@ -454,7 +440,6 @@ h6,
     margin-right: 30px;
 }
 
-
 .tabs__header {
     padding-top: 42px;
     padding-bottom: 42px;
@@ -496,25 +481,23 @@ h6,
     margin-bottom: 39px;
 }
 
-.about__icon:last-child {
-    margin-bottom: 58px;
-}
-
 .about__title {
     display: block;
     padding-top: 38px;
     padding-bottom: 38px;
 }
 
-.about__title:last-child {
-    margin-bottom: 58px;
-}
-
 .about__description {
     display: block;
     text-align: center;
+}
+
+.about__icon:last-child,
+.about__title:last-child,
+.about__description:last-child {
     margin-bottom: 58px;
 }
+
 
 /*PRICE*/
 .price {
@@ -534,12 +517,11 @@ h6,
 .price__cost,
 .price__description, 
 .price__item {
-    display: block;
-    background-color: #333333;
-    margin: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #333333;
+    margin: 2px;
     padding-top: 13px;
     padding-bottom: 13px;
 }
@@ -560,9 +542,8 @@ h6,
 }
 
 .price__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
+    text-align: center;
     color: #86878B;
     background-color: var(--dark-content-color);
 }
@@ -597,10 +578,6 @@ h6,
     border-radius: 10px;
 }
 
-.reviews__quote-descr:last-child {
-    margin-bottom: 46px;
-}
-
 .triangle-down {
 	width: 0;
 	height: 0;
@@ -630,11 +607,11 @@ h6,
 .reviews__manager-name {
     padding-top: 15px;
     padding-bottom: 15px;
-    margin-bottom: 15px;
 }
 
+.reviews__quote-descr:last-child,
 .reviews__manager-name:last-child {
-    margin-bottom: 0px;
+    margin-bottom: 15px;
 }
 
 /*STYLISH*/
@@ -699,7 +676,6 @@ h6,
 }
 
 .contact__form-button {
-
     grid-column: 1 / 3;
     grid-row: 2 / 3;
     margin: 50px auto 50px;
