--- a/css/styles.css
+++ b/css/styles.css
@@ -201,11 +201,13 @@ h6,
 .menu__link:hover {
     background-color: var(--color-accent-and-hover);
     text-transform: uppercase;
+    font-size: 13px;
 }
 
 .menu__link:active {
     background-color:var(--color-accent-active);
     text-transform: uppercase;
+    font-size: 13px;
 }
 
 /*MAIN BANNER*/
